fix: fix article skeleton width on mobile media query

--- a/src/screens/Article/ArticleSkeleton.css
+++ b/src/screens/Article/ArticleSkeleton.css
@@ -6,6 +6,7 @@
   min-width: 600px;
 
   @media (max-width:980px) {
+    min-width: 100%;
     padding-top: 12px;
   }
 }
